<resources>
    <string name="app_name">Goose English</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="bottom_navigation_books_title">Уроки</string>
    <string name="bottom_navigation_tests_title">Тесты</string>
    <string name="bottom_navigation_settings_title">Настройки</string>
    <string name="enter_email">Введите адрес электронной почты</string>
    <string name="enter_password">Введите пароль</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account? Sign in Here</string>
    <string name="fields_empty">Поля пусты!</string>
    <string name="new_user">New User? Register Here</string>
    <string name="sign_in">Sign In</string>
    <string name="logout">Logout</string>
    <string name="your_result_is">Ваш результат</string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>
    <string name="are_you_sure_you_want_to_log_out">Вы уверены, что хотите выйти?</string>
    <string name="change_email">Изменить адрес электронной почты</string>
    <string name="are_you_sure_you_want_to_change_password">Вы уверены, что хотите изменить пароль?</string>
    <string name="change_password">Изменить пароль</string>
    <string name="are_you_sure_you_want_to_change_email">Вы уверены, что хотите изменить адрес электронной почты?</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="are_you_sure_you_want_to_delete_account">Вы уверены, что хотите удалить аккаунт?</string>
    <string name="enter_word">Введите слово</string>
    <string name="delete">Удалить</string>
    <string name="update">Изменить</string>
    <string name="add">Добавить</string>
    <string name="close">Закрыть</string>
    <string name="dictionary">Словарь</string>
    <string name="enter_new_password">Введить новый пароль</string>
    <string name="enter_new_email">Введите новый адрес электронной почты</string>
    <string name="next">Далее</string>
    <string name="goose_english">Goose English</string>
</resources>
